@@ -1161,7 +1161,11 @@ void OrderVisitor::processCircular() {
 		// it is generated by delayed assignment, we need the loop. If
 		// it is combinatorial, we do not (and indeed it will break
 		// other tests such as t_gated_clk_1.
-		if (vvertexp->isDelayed()) {
+		if (!v3Global.opt.orderClockDly()) {
+		    UINFO(5,"Circular Clock, no-order-clock-delay "<<vvertexp<<endl);
+		    nodeMarkCircular(vvertexp, NULL);
+		}
+		else if (vvertexp->isDelayed()) {
 		    UINFO(5,"Circular Clock, delayed "<<vvertexp<<endl);
 		    nodeMarkCircular(vvertexp, NULL);
 		}
